--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
       </label>
       <p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
         <div class="clearfix" >
-        <button type="button" onclick="submitData(event)".style.display='none' class="loginbtn login">Login</button>
-        <button types="button" onclick="putData(event)".style.display='none'class="signupbtn sign up">Sign Up</button>
+        <button type="button" onclick="putData(event)".style.display='none' class="loginbtn login">Login</button>
+        <button types="button" onclick="submitData(event)".style.display='none'class="signupbtn sign up">Sign Up</button>
       </div>
     </div>
   </form>
@@ -40,14 +40,20 @@
 </div>
 <section>
 
-<div id="post-section">
+<div id="one"></div>
+<div id="tow"></div>
+
 <h2>Best Companies</h2>
 <div id="post-items-container"></div>
 </div>
-
-
-
 </section>
+
+<section>  </section>
+
+
+
+
+
 <script src="./js/index.js"></script>
 </body>
 </html>
