--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="./css/style.css">
 <title>GreenTitle</title>
 </head>
@@ -40,8 +41,13 @@
 </div>
 <section>
 
+<div class="rating" data-rating="5"></div>
+
+
+<div class="banner"> 
+<img src="./asset/keyhouse.jpg">
+</div>
 <div id="one"></div>
-<div id="tow"></div>
 
 <h2>Best Companies</h2>
 <div id="post-items-container"></div>
