--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" type="text/css" href="./css/style.css">
 <title>GreenTitle</title>
 </head>
-
+<h4>Rate Your best Company</h4>
 <div class="topnav">
   <a class="#home" href="#home">Home</a>
   <a href="#properties">Properties</a>
@@ -39,19 +39,26 @@
 </div>
 </div>
 
-<section>
-<div class="rating-stars">
-	<input type="radio" name="rating" id="rs0" checked><label for="rs0"></label>
-	<input type="radio" name="rating" id="rs1"><label for="rs1"></label>
-	<input type="radio" name="rating" id="rs2"><label for="rs2"></label>
-	<input type="radio" name="rating" id="rs3"><label for="rs3"></label>
-	<input type="radio" name="rating" id="rs4"><label for="rs4"></label>
-	<input type="radio" name="rating" id="rs5"><label for="rs5"></label>
-	<span class="rating-counter"></span>
-</div>
 
+<main class="app">
+  <div class="boxes">
+    <ul>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+    </ul>
+  </div>
+
+</main>
+
+<section>
+<div id="b1"></div>
+<div id="ratings-list"></div>
 <div id="one"></div>
 </div>
+
+<div class="bg-img"></div>
 </section>
 
 <section id="properties">
@@ -59,10 +66,13 @@
 <script  src="./js/index.js"></script>
 </body>
 </section>
+
+<section>
 <footer>
-  <p>Author: Hege Refsnes</p>
-  <p><a href="mailto:hege@example.com">hege@example.com</a></p>
+  
 </footer>
+</section>
+
 
 <script src="./js/index.js"></script>
 </body>
