--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 </div>
 </div>
 
+<button class="tbtn"onclick="rating(event)">Put your ratings here</button>
 
 <main class="app">
   <div class="boxes">
