--- a/index.html
+++ b/index.html
@@ -1,16 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
-<link rel="stylesheet" type="text/css" href="./css/style.css">
+<link rel="stylesheet" type="text/css" href="css/style.css">
 <title>GreenTitle</title>
 </head>
-<h4>Rate Your best Company</h4>
-<div class="topnav">
-  <a class="#home" href="#home">Home</a>
-  <a href="#properties">Properties</a>
-  <a href="#about">About</a>
-</div>
 <body>
 <button onclick="document.getElementById('id1').style.display='block'" style="width:auto;">Sign Up</button>
 <div id="id1" class="modal">
@@ -39,43 +32,17 @@
 </div>
 </div>
 
-<button class="tbtn"onclick="rating(event)">Put your ratings here</button>
 
-<main class="app">
-  <div class="boxes">
-    <ul>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-    </ul>
-  </div>
+<h4>Rate your Company</h4>
 
-</main>
-
+<div id="msg"></div>
+<div class="container"> 
 <section>
-<div id="b1"></div>
-<div id="ratings-list"></div>
-<div id="one"></div>
+<div id="one" class="row"></div>
+</section>
 </div>
 
-<div class="bg-img"></div>
-</section>
-
-<section id="properties">
-<body>
-<script  src="./js/index.js"></script>
-</body>
-</section>
-
-<section>
-<footer>
-  
-</footer>
-</section>
-
-
-<script src="./js/index.js"></script>
+<script src="js/index.js"></script>
 </body>
 </html>
 
